--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --rs --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --cls --rs --ignore-watch node_modules src/server.ts",
     "test": "cross-env NODE_ENV=test jest --forceExit --runInBand"
   },
   "devDependencies": {
